# mechanistgym

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  research_task.yml
.github/workflows/: ci.yml
docs/: lifecycle.md  research_charter.md
docs/decisions/: 0001-single-agent-first.md  0002-canonical-decay-model.md  0003-checkpointed-agent-failover.md  0004-bounded-async-task-execution.md  0005-visible-provider-baselines.md
docs/reviews/: m0_acceptance_review.md  r0_checkpointed_failover_review.md  r1_bounded_async_execution_review.md  r2_provider_baseline_review.md
src/mechanistgym/: __init__.py  __main__.py  agents.py  demo.py  environment.py  experiment.py  models.py  verification.py
src/mechanistgym/evaluation/: __init__.py  __main__.py  provider_baselines.py
src/mechanistgym/providers/: __init__.py  openai_compatible.py  telemetry.py
src/mechanistgym/runtime/: __init__.py  adapters.py  async_demo.py  demo.py  engine.py  store.py  testing.py  types.py
tests/: __init__.py  test_decay.py  test_demo.py  test_openai_compatible_provider.py  test_provider_baselines.py  test_runtime_concurrency.py  test_runtime_recovery.py
tests/helpers/: runtime_process_worker.py
